Adds detection for Huawei Browser Mobile, iBrowser, iBrowser Mini and improves detection for other browsers (#6915)
* Adds detection for Huawei Browser Mobile and adds Huawei Browser to Chrome family
* Add Blink as default engine to Huawei Browser
* Adds detection for iBrowser
* Improves detection for Beamrise
* Improves detection for Iron
* Improves detection for UBrowser
* Adds detection for iBrowser Mini
* Change regex for iBrowser
* Rename Huawei Browser for PC to Huawei Browser
* Rename Huawei Browser to Huawei Browser Mobile

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -819,6 +819,15 @@
     engine_version: "537.36"
     family: Chrome
 -
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2350.0 Iron/44.0.2350.0 Safari/537.36
+  client:
+    type: browser
+    name: Iron
+    version: 44.0.2350.0
+    engine: Blink
+    engine_version: ""
+    family: Chrome
+-
   user_agent: Mozilla/5.0 (iPhone; CPU OS 8_0 like Mac OS X) AppleWebKit/538.34.9 (KHTML, like Gecko) Mobile/isivioo
   client:
     type: browser
@@ -2154,11 +2163,11 @@
   user_agent: Mozilla/5.0 (Linux; Android 9; VOG-L29 Build/HUAWEIVOG-L29) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/70.0.3538.64 HuaweiBrowser/10.0.1.332 Mobile Safari/537.36
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: "10.0.1.332"
-    engine: WebKit
-    engine_version: "537.36"
-    family:
+    engine: Blink
+    engine_version: ""
+    family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 9; vivo 1901 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.84 Mobile Safari/537.36 VivoBrowser/5.10.0.1
   client:
@@ -2263,9 +2272,9 @@
   client:
     type: browser
     name: UBrowser
-    version: "5.5.5701.114"
-    engine: WebKit
-    engine_version: "537.36"
+    version: 5.5.5701.114
+    engine: Blink
+    engine_version: ""
     family: Chrome
 -
   user_agent: 'Mozilla/5.0 (Linux; U; Android 2.3.5; zh-cn; SHP-SH330T/V03.03; 320*480; CTC/2.0) eZBrowser/1.0'
@@ -2448,6 +2457,15 @@
     engine_version: "535.8"
     family: Chrome
 -
+  user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.57 Beamrise/31.0.1650.7639 Safari/537.36
+  client:
+    type: browser
+    name: Beamrise
+    version: 31.0.1650.7639
+    engine: Blink
+    engine_version: ""
+    family: Chrome
+-
   user_agent: Faux/20151018 CFNetwork/808.1.4 Darwin/16.1.0
   client:
     type: browser
@@ -2462,8 +2480,8 @@
     type: browser
     name: Iron
     version: "77.0.4000.0"
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
     family: Chrome
 -
   user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/602.1 (KHTML, like Gecko) splash Version/10.0 Safari/602.1
@@ -4040,3 +4058,39 @@
     engine: Blink
     engine_version: ""
     family: Opera
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36 HBPC/11.0.7.301
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.0.7.301
+    engine: Blink
+    engine_version: ""
+    family: Chrome
+-
+  user_agent: iBrowser/2.8 Mozilla/5.0 (Linux; Android 4.4.2; itel_it1701 Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Safari/537.36
+  client:
+    type: browser
+    name: iBrowser
+    version: "2.8"
+    engine: WebKit
+    engine_version: "537.36"
+    family: Chrome
+-
+  user_agent: iBrowser/26 Mozilla/5.0 (Linux; U; Android 4.3; fa-ir; C6603 Build/10.4.B.0.569) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  client:
+    type: browser
+    name: iBrowser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+    family: Chrome
+-
+  user_agent: iBrowser/Mini2.8 (Nokia5130c-2/07.97)
+  client:
+    type: browser
+    name: iBrowser Mini
+    version: "2.8"
+    engine: ""
+    engine_version: ""
+    family:
