--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6106,16 +6106,16 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.1.0.300
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: phablet
     brand: Xiaomi
     model: Redmi Note 8
   os_family: Android
-  browser_family: Unknown
+  browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 11; M2101K6R) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.210 Mobile Safari/537.36
   os:
