--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -1843,16 +1843,16 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.5.306
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
     model: P smart (2021)
   os_family: Android
-  browser_family: Unknown
+  browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 10; PPA-LX1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Mobile Safari/537.36 OPR/62.2.3146.57547
   os:
@@ -4965,16 +4965,16 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.4.302
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
     model: Nova 7 SE 5G
   os_family: Android
-  browser_family: Unknown
+  browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 10; I1927) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.101 Mobile Safari/537.36
   os:
@@ -8062,16 +8062,16 @@
     platform: ""
   client:
     type: browser
-    name: Huawei Browser
+    name: Huawei Browser Mobile
     version: 11.0.8.301
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: Huawei
     model: Honor V40
   os_family: Android
-  browser_family: Unknown
+  browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 10; DT1902A Build/QKQ1.191222.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.62
   os:
