Detect new brands: Epson, Awow and Detect devices for existing brands: Prestigio, Zuum, Allwinner, LG, Tecno Mobile, Wiko, POCO, Motorola, Zebra, Inoi, Vivo, NUU Mobile, Lava, TechPad, AllDocube, Sigma, iGet (#6918)
* feat(device) detect brand Prestigio models: Muze G5 LTE (PSP5522DUO), Wize U3 (PSP3514DUO, PSP3514DUO_RU), Wize YA3 (PSP3416DUO), Wize Y3 (PSP3406DUO),
 Grace 7788 4G (PMT7788_4G), Grace 5791 4G (PMT5791_4G), Grace 5778 4G (PMT5778_4G), Grace 5771 4G (PMT5771_4G)

* feat(device) detect new brand Epson model: HA14A LCD Projector
feat(device) detect brand Zuum model: Magno S
feat(device) detect brand Allwinner model: QUAD-CORE T3 K2001
feat(device) detect brand Prestigio model: Grace 5588 4G (PMT5588_4G)

feat(device) added test for brand RCA Tablets model: Voyager III 7.0" (RCT6973W43R)

* feat(device) detect new brand Awow model: UTBook
feat(device) detect brand LG models: V20 (LG-H910PR), Fiesta (LGL63BL), X Cam (LG-F690S), Leon (LG-H320), Optimus G Pro (LG-F240S), G Pro 2 (LG-D838), G3 (LG-AS990)
feat(device) detect brand Tecno Mobile models: Spark 8 (TECNO KG6), Spark 7 (TECNO PR651H)
feat(device) detect brand Wiko model: Y81 (W-V680-EEA)
feat(device) detect brand POCO model: M4 Pro 5G (21091116AG)
feat(device) detect brand Motorola model: Moto E (XT830C)
feat(device) detect brand Zebra model: TC26
feat(device) detect brand Inoi model: Easy Phone
feat(device) detect brand Vivo models: Y51s (V2031_21), Y31 (V2036_21), X60 (V2045), Y21 (V2111), iQOO Neo 5 Lite (V2118A), Y1s (1929)

* feat(device) detect brand NUU Mobile model: A10L (N5502L)
feat(device) detect brand Lava model: Z2 (LMG01)
feat(device) detect brand TechPad model: M5 Go

feat(device) added test for brand Samsung model: Galaxy S9 (SM-G960U1, SM-G960U, SM-G9600, SM-G960W)

* feat(device) detect brand Inoi Mobile model: Pad Mini 1+16 WiFi
feat(device) detect brand AllDocube model: iPlay 8T

* feat(device) detect brand Sigma models: X-Treme PQ54 Max, X-Treme PQ3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2258,7 +2258,7 @@ Allview:
 
 # Allwinner
 Allwinner:
-  regex: '(?:QUAD-CORE (?:A64 p3|A33 y3|T3 K2001M|T3 k2001o)|ZY-07B|UltraOcta-T8|OCTA-CORE T8|OCTOPUS-CORE T8|QuadCore-R16)(?:[);/ ]|$)'
+  regex: '(?:QUAD-CORE (?:A64 p3|A33 y3|T3 K2001M|T3 k2001o|T3 k2001-nwd)|ZY-07B|UltraOcta-T8|OCTA-CORE T8|OCTOPUS-CORE T8|QuadCore-R16)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'QUAD-CORE A64 p3'
@@ -2270,12 +2270,12 @@ Allwinner:
     - regex: 'UltraOcta-T8'
       device: 'car browser'
       model: 'Ultra Octa T8'
-    - regex: 'QUAD-CORE T3 K2001M'
-      device: 'car browser'
-      model: 'QUAD-CORE T3 K2001M'
     - regex: 'QUAD-CORE T3 K2001o'
       device: 'car browser'
       model: 'QUAD-CORE T3 K2001O'
+    - regex: 'QUAD-CORE T3 K(2001M?)'
+      device: 'car browser'
+      model: 'QUAD-CORE T3 K$1'
     - regex: 'OCTA-CORE T8'
       device: 'car browser'
       model: 'OCTA-CORE T8'
@@ -3320,7 +3320,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[2-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V205[0458]|V206[015689]|V20(?:6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V2043_21|V213[346]A|V214[13]A|I1928|V21[12]1A|V2106A|V2109|V2110|V2123A|V2026_21|V210[25]|V2053)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[2-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V2036_21|V204[013]|V204[6789]A|V205[0458]|V206[015689]|V20(?:6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V2118A|V2045|V2031_21|V2043_21|V213[346]A|V214[13]A|I1928|V21[12]1A|V2106A|V2109|V211[01]|V2123A|V2026_21|V210[25]|V2053)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3345,6 +3345,8 @@ Vivo:
       model: 'iQOO Neo 855'
     - regex: 'V2055A(?:[);/ ]|$)'
       model: 'iQOO Neo 5'
+    - regex: 'V2118A(?:[);/ ]|$)'
+      model: 'iQOO Neo 5 Lite'
     - regex: 'V1986A(?:[);/ ]|$)'
       model: 'iQOO Z1'
     - regex: 'V2012A(?:[);/ ]|$)'
@@ -3509,7 +3511,7 @@ Vivo:
       model: 'X50 Pro'
     - regex: '(?:V2011A|X50 Pro\+)(?:[);/ ]|$)'
       model: 'X50 Pro Plus'
-    - regex: 'V20(?:46|59)A(?:[);/ ]|$)'
+    - regex: '(?:V20(?:46|59)A|V2045)(?:[);/ ]|$)'
       model: 'X60'
     - regex: 'V2085A(?:[);/ ]|$)'
       model: 'X60t'
@@ -3525,7 +3527,7 @@ Vivo:
       model: 'X$1 Plus'
     - regex: 'vivo Xplay6(?:[);/ ]|$)'
       model: 'X Play 6'
-    - regex: 'vivo 2015(?:_21)?(?:[);/ ]|$)'
+    - regex: 'vivo (?:1929|2015)(?:_21)?(?:[);/ ]|$)'
       model: 'Y1s'
     - regex: 'vivo 1902(?:[);/ ]|$)'
       model: 'Y17'
@@ -3565,6 +3567,8 @@ Vivo:
       model: 'Y20i'
     - regex: 'V2110(?:[);/ ]|$)'
       model: 'Y21s'
+    - regex: 'V2111(?:[);/ ]|$)'
+      model: 'Y21'
     - regex: 'V2023(?:[);/ ]|$)'
       model: 'V20 SE'
     - regex: 'V1901[AT](?:[);/ ]|$)'
@@ -3577,7 +3581,7 @@ Vivo:
       model: 'Y30 (2021)'
     - regex: 'V2066[B]?A(?:[);/ ]|$)'
       model: 'Y30g'
-    - regex: 'V2036(?:[);/ ]|$)'
+    - regex: 'V2036(?:_21)?(?:[);/ ]|$)'
       model: 'Y31'
     - regex: 'V2068A?(?:[);/ ]|$)'
       model: 'Y31s'
@@ -3591,7 +3595,7 @@ Vivo:
       model: 'Y51'
     - regex: 'vivo 1707(?:[);/ ]|$)'
       model: 'Y51 (2015)'
-    - regex: 'V2031(?:[);/ ]|$)'
+    - regex: 'V2031(?:_21)?(?:[);/ ]|$)'
       model: 'Y51s'
     - regex: 'V2054A(?:[);/ ]|$)'
       model: 'Y31s'
@@ -4887,7 +4891,7 @@ Crosscall:
 
 # AllDocube (alldocube.com)
 AllDocube:
-  regex: '(?:T1001XS?|T1006S?|iPlay_[234]0|U1006H?|iPlay8|iPlay30|iPlay_40H|iPlay20S)(?:[);/ ]|$)'
+  regex: '(?:T1001XS?|T1006S?|iPlay_[234]0|U1006H?|iPlay8|iPlay_8T|iPlay30|iPlay_40H|iPlay20S)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'T1001XS(?:[);/ ]|$)'
@@ -4900,7 +4904,7 @@ AllDocube:
       model: 'M5X'
     - regex: 'U1006H?(?:[);/ ]|$)'
       model: 'iPlay 10 Pro 10.1"'
-    - regex: 'iPlay_?([234]0|8|40H|20s)(?:[);/ ]|$)'
+    - regex: 'iPlay_?([234]0|8T?|40H|20s)(?:[);/ ]|$)'
       model: 'iPlay $1'
 
 # Cube (short name Alldocube)
@@ -5554,7 +5558,7 @@ E-Boda:
 
 # Easypix
 Easypix:
-  regex: 'EasyPad|EasyPhone'
+  regex: 'EasyPad|(?<!INOI )EasyPhone'
   device: 'smartphone'
   models:
     - regex: '(EasyPhone[^/;]+) Build'
@@ -9790,6 +9794,8 @@ Lava:
       model: 'Z61'
     - regex: 'LMX06(?:[);/ ]|$)'
       model: 'Z6'
+    - regex: 'LMG01(?:[);/ ]|$)'
+      model: 'Z2'
     - regex: 'Z60s(?:[);/ ]|$)'
       model: 'Z60s'
     - regex: 'LE9920[ _]P(?:[);/ ]|$)'
@@ -10360,7 +10366,7 @@ Lenovo:
       model: 'Vibe Z2'
     - regex: '(?:VIBE C|A2020a40)(?:[);/ ]|$)'
       model: 'Vibe C'
-    - regex: 'VIBE X2(?:[);/ ]|$)'
+    - regex: '(?:VIBE X2)(?:[);/ ]|$)'
       model: 'Vibe X2'
     - regex: 'X3(?:a40|c50)(?:[);/ ]|$)'
       model: 'Vibe X3'
@@ -10432,6 +10438,8 @@ Lenovo:
 
     - regex: 'Lenovo K12 Pro'
       model: 'K12 Pro'
+    - regex: 'Lenovo X2(?:-[ER]U)?'
+      model: 'X2'
 
     - regex: 'VR-1541F'  # VR headset
       device: 'wearable'
@@ -10587,7 +10595,7 @@ LG:
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
       model: 'G2 Mini'
-    - regex: 'LG-D85[012568]|VS985|LGLS990|LGL24(?:[);/ ]|$)'
+    - regex: 'LG-(?:D85[012568]|AS990)|VS985|LGLS990|LGL24(?:[);/ ]|$)'
       model: 'G3'
     - regex: 'LG-D722'
       model: 'G3S'
@@ -10649,6 +10657,8 @@ LG:
       model: 'Tribute'
     - regex: '(?:LG-)?H50[02]'
       model: 'Magna'
+    - regex: 'LGL63BL'
+      model: 'Fiesta'
     - regex: 'LG-(?:X15[05]|X165g)'
       model: 'Bello 2'
     - regex: 'LG-D33[15]'
@@ -10675,6 +10685,8 @@ LG:
       model: 'Optimus One'
     - regex: 'LG-E975'
       model: 'Optimus G'
+    - regex: 'LG-F240[KLS]'
+      model: 'Optimus G Pro'
     - regex: 'LG-E435f'
       model: 'Optimus L3 II'
     - regex: 'LG-E4(?:70f|40|65f)'
@@ -10775,7 +10787,7 @@ LG:
       model: 'Solo LTE'
     - regex: 'LM-X210K'
       model: 'X2'
-    - regex: 'LG-(?:K580|F690L)'
+    - regex: 'LG-(?:K580|F690[LS])'
       model: 'X Cam'
     - regex: 'LG-(?:SP320|M32[27])'
       model: 'X Charge'
@@ -10957,7 +10969,7 @@ LG:
       model: 'Optimus Vu'
     - regex: '(?:LG-)?P880'
       model: 'Optimus 4X HD'
-    - regex: '(?:LG-)?(H340n?|H324)'
+    - regex: '(?:LG-)?(H340n?|H32[04])'
       model: 'Leon'
     - regex: '(?:LG-)?H342|LGMS345'
       model: 'Leon 4G LTE'
@@ -10979,6 +10991,9 @@ LG:
       model: 'Lucid 2'
     - regex: 'VS810PP'
       model: 'Transpyre'
+    - regex: 'LG-D838'
+      model: 'G Pro 2'
+
     - regex: 'LM-F100N?(?:[);/ ]|$)'
       device: 'phablet'
       model: 'WING'
@@ -12198,7 +12213,7 @@ Motorola:
       model: 'Droid RAZR D3'
     - regex: '(?:MOT-|Motorola-)?XT925'
       model: 'Droid RAZR HD'
-    - regex: '(?:MOT-|Motorola-)?XT102[12]'
+    - regex: '(?:MOT-|Motorola-)?(?:XT102[12]|XT830C)'
       model: 'Moto E'
     - regex: '(?:MOT-|Motorola-)?XT1706'
       model: 'Moto E3 Power'
@@ -12946,7 +12961,7 @@ Nomi:
 
 # NUU Mobile
 NUU Mobile:
-  regex: 'NUU_|(?:(?:N(5702|500[12])L|S6001L|[SN]5501L)|A6L-[CG])(?:[);/ ]|$)'
+  regex: 'NUU_|(?:(?:N(5702|500[12])L|S6001L|[SN]5501L)|A6L-[CG]|N5502L)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'NUU_A([13])'
@@ -12965,6 +12980,8 @@ NUU Mobile:
       model: 'A5L'
     - regex: 'N5002L'
       model: 'A7L'
+    - regex: 'N5502L'
+      model: 'A10L'
     - regex: '(N5001L|A6L-[CG])(?:[);/ ]|$)'
       model: '$1'
 
@@ -16514,16 +16531,19 @@ Prestigio:
     - regex: 'PSP3511DUO'
       device: 'smartphone'
       model: 'Muze G3 LTE'
-    - regex: 'PSP7550DUO(?:[);/ ]|$)'
+    - regex: 'PSP5522DUO'
+      device: 'smartphone'
+      model: 'Muze G5 LTE'
+    - regex: 'PSP7550DUO'
       device: 'smartphone'
       model: 'Muze G7 LTE'
-    - regex: 'PSP7510DUO(?:[);/ ]|$)'
+    - regex: 'PSP7510DUO'
       device: 'smartphone'
       model: 'Muze C7 LTE'
     - regex: '(?:Muze C3|PSP3504DUO)(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
-    - regex: 'PSP3512DUO(?:[);/ ]|$)'
+    - regex: 'PSP3512DUO'
       device: 'smartphone'
       model: 'Muze B3'
     - regex: 'PSP3532DUO'
@@ -16538,6 +16558,15 @@ Prestigio:
     - regex: 'PSP7511DUO'
       device: 'smartphone'
       model: 'Muze B7'
+    - regex: 'PSP3514DUO'
+      device: 'smartphone'
+      model: 'Wize U3'
+    - regex: 'PSP3416DUO'
+      device: 'smartphone'
+      model: 'Wize YA3'
+    - regex: 'PSP3406DUO'
+      device: 'smartphone'
+      model: 'Wize Y3'
     - regex: 'PSP3423DUO'
       device: 'smartphone'
       model: 'Wize R3'
@@ -16568,7 +16597,7 @@ Prestigio:
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
       model: 'Geo Vision Tour 2'
-    - regex: 'PMT(3118|3[12]01|3[12]57)[_ ]([34])G'
+    - regex: 'PMT(3118|3[12]01|3[12]57|7788|5588|5791|577[18])[_ ]([34])G'
       model: 'Grace $1 $2G'
     - regex: 'PMT3287_3G'
       model: 'MultiPad Ranger 8.0 3G'
@@ -16847,6 +16876,8 @@ Sigma:
   regex: 'Sigma(?!Designs)|(X[_-]Style[ _]?Tab[_ ]A([0-9]{2,3})|X[-_ ]?treme[-_ ]?PQ[0-9]{2}|X-Style_S5501)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: '(?:Sigma[ _])?X[-_ ]?treme[-_ ]?PQ([0-9]{2}) Max(?:[);/ ]|$)'
+      model: 'X-Treme PQ$1 Max'
     - regex: '(?:Sigma[ _])?X[-_ ]?treme[-_ ]?PQ([0-9]{2})(?:[);/ ]|$)'
       model: 'X-Treme PQ$1'
     - regex: 'X[_-]Style[ _]?Tab[_ ]A([0-9]{2,3})(?:[);/ ]|$)'
@@ -17559,12 +17590,14 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
-    - regex: 'TECNO[ _]KF6[nmjk]?(?:[);/ ]|$)'
+    - regex: 'TECNO[ _](?:KF6[nmjk]?|PR651H?)(?:[);/ ]|$)'
       model: 'Spark 7'
     - regex: 'TECNO[ _]KF8(?:[);/ ]|$)'
       model: 'Spark 7 Pro'
     - regex: 'TECNO[ _]KF7j(?:[);/ ]|$)'
       model: 'Spark 7P'
+    - regex: 'TECNO[ _]KG6(?:[);/ ]|$)'
+      model: 'Spark 8'
     - regex: 'TECNO[ _]KC1h(?:[);/ ]|$)'
       model: 'Spark Go'
     - regex: 'TECNO[ _]KC1(?:[);/ ]|$)'
@@ -17623,7 +17656,7 @@ Tecno Mobile:
 
 # TechPad (techpad.mx)
 TechPad:
-  regex: 'Tech[ _]?pad|XTAB[ _-]|(?:3G_16|Dual C1081HD|S813G|NOTE[_ ]4CAM)(?:[);/ ]|$)'
+  regex: 'Tech[ _]?pad|XTAB[ _-]|(?:3G_16|Dual C1081HD|S813G|NOTE[_ ]4CAM|M5Go)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'S813G'
@@ -17644,12 +17677,18 @@ TechPad:
       model: 'XTAB C1081HD'
     - regex: 'XTAB[ _-]([^/;]+) Build'
       model: 'XTAB $1'
+    # explicit smartphone models
+    - regex: 'M5Go'
+      device: 'smartphone'
+      model: 'M5 Go'
     - regex: 'NOTE 4CAM'
       device: 'smartphone'
       model: 'Note 4 Cam'
+    # explicit feature phone models
     - regex: 'Tech_Pad_Kaios_One_3G'
       device: 'feature phone'
       model: 'Kaios One 3G'
+
     - regex: 'Tech ?pad[ _-]([^/;)]+)(?: Build|[;)])'
       model: '$1'
       device: 'smartphone'
@@ -18875,7 +18914,7 @@ Wink:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|T[HV])|WIM Lite|W-V851|W-K360-TV|W-V6[08]0|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?W-V745'
@@ -19044,6 +19083,8 @@ Wiko:
       model: 'View Go'
     - regex: 'W-V800-(TVM|TIM|EEA|OPE|DU)'
       model: 'View 3 Lite'
+    - regex: 'W-V851'
+      model: 'View 5'
     - regex: 'W-K130-(?:OPE|EEA)'
       model: 'Y50'
     - regex: 'W-K420-EEA'
@@ -19056,6 +19097,8 @@ Wiko:
       model: 'Y62'
     - regex: 'W-V720-(?:EEA|OPE|SUN)'
       model: 'Y80'
+    - regex: 'W-V680'
+      model: 'Y81'
     - regex: 'W-P311-(?:EEA|OPE|TVM)'
       model: 'View 3'
     - regex: 'W-P611-(?:EEA|OPE)'
@@ -19188,7 +19231,7 @@ X-View:
 
 # POCO (sub brand Xiaomi)
 POCO:
-  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32]|F3)|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20S[GI]|M2103K19P[GY]|21061110AG|M2104K10I)(?:[);/ ]|$)'
+  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M[32]|F3)|M2010J19C[GI]|M2007J20C[ITG]|M2012K11AG|M2006C3MI|M2004J19PI|M2102J20S[GI]|M2103K19P[GY]|21091116AG|21061110AG|M2104K10I)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POCO X2(?:[);/ ]|$)'
@@ -19201,6 +19244,8 @@ POCO:
       model: 'M3 Pro 5G'
     - regex: 'POCO M([23]) Pro(?:[);/ ]|$)'
       model: 'M$1 Pro'
+    - regex: '21091116AG'
+      model: 'M4 Pro 5G'
     - regex: '(?:M2010J19C[GI]|POCO M3)(?:[);/ ]|$)'
       model: 'M3'
     - regex: '(?:M2007J20C[GT]|POCO X3 NFC)(?:[);/ ]|$)'
@@ -20854,7 +20899,7 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|Android 6.+ UNIQ(?: Build|[);])|(?:ROCKET II|Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1|M2))?|GRAVITY [ZM]|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|Android 6.+ UNIQ(?: Build|[);])|(?:ROCKET II|Akus Z|COVET|MAGNO(?:-S)?|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1|M2))?|GRAVITY [ZM]|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Akus Z'
@@ -20869,6 +20914,8 @@ Zuum:
       model: 'Covet$1'
     - regex: 'MAGNO PLUS'
       model: 'Magno Plus'
+    - regex: 'MAGNO-S'
+      model: 'Magno S'
     - regex: 'MAGNO( C1?)?'
       model: 'Magno$1'
     - regex: 'ONIX S'
@@ -21006,6 +21053,11 @@ Inoi:
     - regex: 'inoiPad 2\+32 Wi-Fi\+3G'
       device: 'tablet'
       model: 'Pad 2+32'
+    - regex: 'inoiPad mini 1\+16 Wi-Fi'
+      device: 'tablet'
+      model: 'Pad Mini 1+16 WiFi'
+    - regex: 'INOI easyphone'
+      model: 'Easy Phone'
     - regex: 'INOI (2|5) Lite (2019|2021)'
       model: '$1 Lite ($2)'
     - regex: 'INOI[_ ]([13])[_ ]LITE'
@@ -21800,7 +21852,7 @@ Zfiner:
 
 # iGet
 iGet:
-  regex: 'SMART[_ ](G10[12]|S7[02]|G71|G81[H]?|L103|W10X)(?:_eea)?(?:[);/ ]|$)'
+  regex: 'SMART[_ ](L20X|G10[12]|S7[02]|G71|G81[H]?|L103|W10X)(?:_eea)?(?:[);/ ]|$)'
   device: 'tablet'
   model: 'Smart $1'
 
@@ -23853,7 +23905,7 @@ Winmax:
 
 # Zebra (zebra.com)
 Zebra:
-  regex: ' (TC5[16]|TC2[05]|TC75|TC7[05]x|TC700H)(?:[);/ ]|$)'
+  regex: ' (TC5[16]|TC2[056]|TC75|TC7[05]x|TC700H)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -25877,6 +25929,18 @@ MyGica:
 Novex:
   regex: '(NWX-40F171MSY)(?:[);/ ]|$)'
   device: 'tv'
+  model: '$1'
+
+# Epson (epson.com)
+Epson:
+  regex: 'Projector(?:[);/ ]|$)'
+  device: 'peripheral'
+  model: 'HA14A LCD Projector' # sti6200-d101
+
+# Awow or AWOW
+Awow:
+  regex: '(UTBook)'
+  device: 'tablet'
   model: '$1'
 
 # Mitsui (www.diamond-electronics.com)
