--- a/Tests/fixtures/peripheral.yml
+++ b/Tests/fixtures/peripheral.yml
@@ -300,3 +300,21 @@
     model: DT40
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; Projector) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.71 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 94.0.4606.71
+    engine: Blink
+    engine_version: ""
+  device:
+    type: peripheral
+    brand: Epson
+    model: HA14A LCD Projector
+  os_family: Android
+  browser_family: Chrome
