--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2740,10 +2740,10 @@
   client:
     type: browser
     name: Lunascape
-    version: "3251"
+    version: ""
     engine: WebKit
     engine_version: "601.1.46"
-    family:
+    family: ""
 -
   user_agent: Mozilla/5.0 (iPad; U; CPU OS 4_2_1 like Mac OS X; ja-jp) AppleWebKit/533.17.9 (KHTML. like Gecko) Mobile/8C148 Safari/6533.18.5 iLunascapeLite/3.2.1
   client:
@@ -4094,3 +4094,12 @@
     engine: ""
     engine_version: ""
     family:
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; M2006C3LG Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/88.0.4324.93 Mobile Safari/537.36 iLunascape/11.2.2
+  client:
+    type: browser
+    name: Lunascape
+    version: 11.2.2
+    engine: Blink
+    engine_version: ""
+    family: ""
