Improves version detection for iOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2823,3 +2823,35 @@
     version: 15.0.2
     platform: ""
     family: iOS
+-
+  user_agent: MobileSafari/601.1 CFNetwork/758.5.3 Darwin/15.6.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: 9.3.5
+    platform: ""
+    family: iOS
+-
+  user_agent: Puffin/16015 CFNetwork/893.14.2 Darwin/17.3.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "11.2"
+    platform: ""
+    family: iOS
+-
+  user_agent: MobileSafari/604.1 CFNetwork/894 Darwin/17.4.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: 11.2.6
+    platform: ""
+    family: iOS
+-
+  user_agent: Puffin/15867 CFNetwork/897.15 Darwin/17.5.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "11.3"
+    platform: ""
+    family: iOS
