--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -554,6 +554,12 @@
       version: '11.4.1'
     - regex: 'Darwin/17.6.0'
       version: '11.4'
+    - regex: 'Darwin/17.5.0'
+      version: '11.3'
+    - regex: 'Darwin/17.4.0'
+      version: '11.2.6'
+    - regex: 'Darwin/17.3.0'
+      version: '11.2'
     - regex: 'CFNetwork/889'
       version: '11.1'
     - regex: 'CFNetwork/887'
@@ -570,6 +576,8 @@
       version: '10.0'
     - regex: 'CFNetwork/808'
       version: '10'
+    - regex: 'CFNetwork/758\.5\.3'
+      version: '9.3.5'
     - regex: 'CFNetwork/758\.4\.3'
       version: '9.3.2'
     - regex: 'CFNetwork/758\.3\.15'
