Improves version detection for iOS

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -501,7 +501,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'iOS(?:/|; )(\d+[\.\d]+)'
+- regex: '(?:iPhone ?OS|iOS(?: Version)?)(?:/|; |,)(\d+[\.\d]+)'
   name: 'iOS'
   version: '$1'
 
