Improves version detection for iOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2879,3 +2879,19 @@
     version: 13.1.1
     platform: ""
     family: iOS
+-
+  user_agent: gamed/5.11.20.4.9.17.5.5.2 (iPad4,4; 12.4.8; 16G201; GameKit-577.8)
+  os:
+    name: iOS
+    short_name: IOS
+    version: 12.4.8
+    platform: ""
+    family: iOS
+-
+  user_agent: iPhone7,1; Version 12.4.6 (Build 16G183); com.apple.ap.adprivacyd; 143441-1,29
+  os:
+    name: iOS
+    short_name: IOS
+    version: 12.4.6
+    platform: ""
+    family: iOS
