Improves detection for Mac

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2895,3 +2895,11 @@
     version: 12.4.6
     platform: ""
     family: iOS
+-
+  user_agent: Safari5533.22.3 CFNetwork/438.16 Darwin/9.8.0 (Power Macintosh) (PowerMac7,2)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.5.8
+    platform: ""
+    family: Mac
