--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -505,7 +505,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'CFNetwork/.+ Darwin/(\d+[\.\d]+)(?!.*(?:x86_64|i386))'
+- regex: 'CFNetwork/.+ Darwin/(\d+[\.\d]+)(?!.*(?:x86_64|i386|PowerMac))'
   name: 'iOS'
   versions:
     - regex: 'Darwin/21.2.0'
@@ -689,7 +689,7 @@
 # Mac
 ##########
 
-- regex: 'CFNetwork/.+ Darwin/(?:[\d\.]+).+(?:x86_64|i386)|(?:x86_64-apple-)?darwin(?:[\d\.]+)'
+- regex: 'CFNetwork/.+ Darwin/(?:[\d\.]+).+(?:x86_64|i386)|(?:x86_64-apple-)?darwin(?:[\d\.]+)|PowerMac'
   name: 'Mac'
   versions:
     - regex: '(?:x86_64-apple-)?Darwin/?21.2.0'
@@ -812,6 +812,8 @@
       version: '10.6.7'
     - regex: '(?:x86_64-apple-)?Darwin/?10.3.0'
       version: '10.6.3'
+    - regex: '(?:x86_64-apple-)?Darwin/?9.8.0'
+      version: '10.5.8'
     - regex: '(?:x86_64-apple-)?Darwin/?9.7.1'
       version: '10.5.7'
     - regex: '(?:x86_64-apple-)?Darwin/?9.6.2'
