--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7796,3 +7796,21 @@
     model: VGN-FE650FM
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Safari5533.22.3 CFNetwork/438.16 Darwin/9.8.0 (Power Macintosh) (PowerMac7,2)
+  os:
+    name: Mac
+    version: 10.5.8
+    platform: ""
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: Power Macintosh G5 (2003)
+  os_family: Mac
+  browser_family: Safari
