--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -918,6 +918,9 @@ Apple:
     - regex: '(?:.+_)?Macmini7(?:%2C|,)1'
       device: 'desktop'
       model: 'Mac Mini (2014)'
+    - regex: '(?:.+_)?PowerMac7(?:%2C|,)2'
+      device: 'desktop'
+      model: 'Power Macintosh G5 (2003)'
 
     # specific smartphone devices
     - regex: '(?:Apple-|.+_)?iPh(?:one)?1[C,_]1'
