feat(device) detect brand Huawei model: Honor 50 Lite (NTN-LX1) feat(device) detect brand General Mobile model: GM 21 (G310), GM 21 Plus (G510), GM 21 Pro (G700), GM 20 Pro (G501), GM 20 (G301) feat(device) detect brand Meizu model: PRO 6 Plus feat(device) detect brand Teclast model: P80 feat(device) detect brand Rombica model: Smart Box Q2
feat(device) added test for Digma model: VOX S513 4G
feat(device) added test for brand HTC model: Desire 20 Pro

--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -6016,7 +6016,7 @@
   device:
     type: smartphone
     brand: Meizu
-    model: Pro 7 Plus
+    model: PRO 7 Plus
   os_family: Android
   browser_family: Unknown
 -
