--- a/Tests/fixtures/unknown.yml
+++ b/Tests/fixtures/unknown.yml
@@ -3069,3 +3069,21 @@
     model: ""
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; G700 Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36 OPR/51.2.2461.137690
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 51.2.2461.137690
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: ""
+    model: ""  # lenoveo G700?
+  os_family: Android
+  browser_family: Opera
