feat(device) detect brand Cloudfone model: Go SP, Go SP 2, Next Infinity Plus, Go Connect Lite 2, Go Connect Lite, Go Connect
feat(device) added test for Huawei model: P9 (EVA-L29)
feat(device) added test for Centric model: P1 (CM3321)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22961,7 +22961,7 @@ Cloudpad:
 
 # Cloudfone
 Cloudfone:
-  regex: 'CloudFone[ _]|(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro|NBA Edition)(?:[);/ ]|$)'
+  regex: 'CloudFone[ _]|(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro|NBA Edition|Go SP|Next Infinity Plus|Go Connect)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Thrill Boost 2 Plus(?:[);/ ]|$)'
@@ -22978,6 +22978,8 @@ Cloudfone:
       model: 'Excite Prime 2 Pro'
     - regex: 'NBA Edition(?:[);/ ]|$)'
       model: 'NBA Edition'
+    - regex: '(Go SP(?: 2)?|Next Infinity Plus|Go Connect(?: Lite)?(?: 2)?)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'Next(?:[);/ ]|$)'
       model: 'Next'
 
