feat(device) detect brand Maze models: Blade, Comet

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11489,13 +11489,15 @@ Maze Speed:
 
 # Maze (mazephone.com)
 Maze:
-  regex: '(?:Alpha[_ ]X|Maze Alpha)(?:[);/ ]|$)'
+  regex: '(?:Alpha[_ ]X|Maze Alpha)(?:[);/ ]|$)|(?:Blade|Comet)(?: Build|[;)])'
   device: 'smartphone'
   models:
     - regex: 'Alpha[_ ]X(?:[);/ ]|$)'
       model: 'Alpha X'
     - regex: 'Maze Alpha(?:[);/ ]|$)'
       model: 'Alpha'
+    - regex: '(Blade|Comet)(?:[);/ ]|$)'
+      model: '$1'
 
 # Mediacom (mediacomeurope.it)
 Mediacom:
