feat(device) rename model A9 (EN) to A9 for Oppo brand

--- a/Tests/fixtures/smartphone-10.yml
+++ b/Tests/fixtures/smartphone-10.yml
@@ -7726,7 +7726,7 @@
   device:
     type: smartphone
     brand: OPPO
-    model: A9 (EN)
+    model: A9
   os_family: Android
   browser_family: Unknown
 - 
