feat(device) rename model CPH1801 to a71 (2018) for Oppo brand

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13589,8 +13589,10 @@ OPPO:
       model: 'A5S'
     - regex: '(?:OPPO[ _]?)?(?:CPH190[15]|PBF[TM]00)(?:[);/ ]|$)'
       model: 'A7'
-    - regex: '(?:OPPO[ _]?)?(CPH1801|CPH1717)(?:[);/ ]|$)'
+    - regex: '(?:OPPO[ _]?)?CPH1717(?:[);/ ]|$)'
       model: 'A71'
+    - regex: '(?:OPPO[ _]?)?CPH1801(?:[);/ ]|$)'
+      model: 'a71 (2018)'
     - regex: '(?:OPPO[ _]?)?(?:PDY[TM]20|CPH2067)(?:[);/ ]|$)'
       model: 'A72'
     - regex: 'CPH(?:2161|2099)(?:[);/ ]|$)'
