--- a/Tests/fixtures/smartphone-10.yml
+++ b/Tests/fixtures/smartphone-10.yml
@@ -7438,7 +7438,7 @@
   device:
     type: smartphone
     brand: OPPO
-    model: A71
+    model: A71 (2018)
   os_family: Android
   browser_family: Unknown
 - 
