feat(device) detect new brand Aocos model: PX102 feat(device) detect brand Elephone model: PX, PX Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5647,7 +5647,7 @@ Eks Mobility:
 
 # Elephone
 Elephone:
-  regex: 'Elephone|Vowney(?: Lite)?|P6000(?!_Plus)( ?Pro| ?Plus|\+| ?02| 5.0 01)?|Soldier|(?:P8_3D|P8_Max|A6_mini)(?:[);/ ]|$)'
+  regex: 'Elephone|Vowney(?: Lite)?|P6000(?!_Plus)( ?Pro| ?Plus|\+| ?02| 5.0 01)?|Soldier|(?:P8_3D|P8_Max|A6_mini|Android 9.+ PX|PX_Pro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Elephone Trunk(?:[);/ ]|$)'
@@ -5668,6 +5668,10 @@ Elephone:
       model: 'Soldier'
     - regex: 'A6_mini(?:[);/ ]|$)'
       model: 'A6 Mini'
+    - regex: 'PX_Pro(?:[);/ ]|$)'
+      model: 'PX Pro'
+    - regex: 'Android 9.+ PX(?:[);/ ]|$)'
+      model: 'PX'
     - regex: '(P8_3D|P8_Max)(?:[);/ ]|$)'
       model: '$1'
     - regex: '(?:Elephone[ _])?(P[768]000|S2)(?:[);/ ]|$)'
@@ -26018,6 +26022,12 @@ Neon IQ:
       model: 'Tab 7" $1G'
     - regex: 'NQT-7W'
       model: 'Tab 7" WiFi'
+
+# Aocos
+Aocos:
+  regex: 'AOCOS ([^);/]+)(?: Build|[);])'
+  device: 'tablet'
+  model: '$1'
 
 # Devices with undectable brand, but detectable model
 Unknown:
